# Mercatura

./: CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  configure.ac  libgroestlcoinkernel.pc.in  mine_main_genesis.py  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml
.github/workflows/: ci.yml  config.yml  depends.yml  executable.yml  guix.yml  manpages.yml
ci/: lint.py  lint_imagefile
ci/lint/: 06_script.sh
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_no_ipc.sh  00_setup_env_mac_cross.sh  00_setup_env_mac_cross_intel.sh  00_setup_env_mac_native.sh  00_setup_env_mac_native_fuzz.sh  00_setup_env_native_alpine_musl.sh  00_setup_env_native_asan.sh  00_setup_env_native_chimera_lto.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_iwyu.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet.sh  00_setup_env_native_previous_releases.sh  00_setup_env_native_tidy.sh  00_setup_env_native_tsan.sh  00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  00_setup_env_win64.sh  00_setup_env_win64_msvcrt.sh  02_run_container.py  03_test_script.sh
cmake/: windows-app.manifest.in
cmake/module/: AddBoostIfNeeded.cmake  GenerateSetupNsi.cmake  Maintenance.cmake
cmake/script/: Coverage.cmake
contrib/: README.md
contrib/asmap/: README.md  asmap-tool.py
contrib/debian/: copyright
contrib/devtools/: README.md  convert_cashaddr.cpp  gen-groestlcoin-conf.sh  gen-manpages.py  headerssync-params.py
contrib/guix/: INSTALL.md  README.md  guix-build  guix-clean  guix-codesign  manifest.scm  symbol-check.py
contrib/init/: groestlcoind.openrc  groestlcoind.service
contrib/linearize/: linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  macdeployqtplus
contrib/message-capture/: message-capture-docs.md
contrib/qos/: tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_signet.txt  nodes_test.txt
contrib/signet/: README.md  getcoins.py  miner
contrib/testgen/: README.md
contrib/tracing/: README.md  connectblock_benchmark.bt  log_p2p_traffic.bt  log_raw_p2p_msgs.py  log_utxocache_flush.py  log_utxos.bt  mempool_monitor.py  p2p_monitor.py
contrib/utxo-tools/: utxo_to_sqlite.py
contrib/verify-binaries/: README.md  test.py  verify.py
contrib/verify-commits/: pre-push-hook.sh  verify-commits.py
contrib/windeploy/: win-codesign.cert
contrib/zmq/: zmq_sub.py
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  INSTALL_linux.md  JSON-RPC-interface.md  README.md  README_doxygen.md  REST-interface.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  external-signer.md  files.md  fuzzing.md  groestlcoin-conf.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-process.md  tor.md  tracing.md  translation_strings_policy.md  zmq.md
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/man/: groestlcoin.1
doc/policy/: packages.md
share/: setup.nsi.in
src/: CMakeLists.txt  Makefile.am  Makefile.qt.include  Makefile.test.include  addrdb.cpp  addrman.cpp  base58.cpp  bitcoin.cpp  blockindex.h  chainparams.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  core_io.cpp  cuckoocache.h  external_signer.h  genesis_miner.cpp  genesis_miner.cpp.save  groestlcoin-chainstate.cpp  groestlcoin-cli-res.rc  groestlcoin-cli.cpp  groestlcoin-hash.cpp  groestlcoin-res.rc  groestlcoin-tx-res.rc  groestlcoin-tx.cpp  groestlcoin-util-res.rc  groestlcoin-util.cpp  groestlcoin-wallet-res.rc  groestlcoin-wallet.cpp  groestlcoin.cpp  groestlcoin.h  groestlcoind-res.rc  groestlcoind.cpp  hash.h  init.cpp  init.h  key.cpp  mercatura-genesis.cpp  (+13 more)
src/bench/: bech32.cpp
src/kernel/: CMakeLists.txt  chainparams.cpp  groestlcoinkernel.cpp  groestlcoinkernel_wrapper.h
test/: get_previous_releases.py
(+186 files in other folders)
